--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,5 +1,5 @@
 .slider {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     position: relative;
     width: 100%;
     height: 100vh;
@@ -8,16 +8,21 @@
     padding: 0;
     display: flex;
     align-items: center;
+    overflow: hidden;
+    background: black;
 }
 
 .slide {
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     min-width: 100%;
     height: 80vh;
     transition: 0.5S;
+    overflow: hidden;
 }
 
 #goLeft {
+    font-size: 2vw;
+    font-weight: 700;
     position: absolute;
     top: 50%;
     left: 0;
@@ -25,9 +30,14 @@
     width: 5%;
     height: 80vh;
     background: 0;
+    border: none;
+    outline: none;
+    transition: 0.2s;
 } 
 
 #goRight {
+    font-size: 2vw;
+    font-weight: 700;
     position: absolute;
     top: 50%;
     right: 0;
@@ -35,4 +45,14 @@
     width: 5%;
     height: 80vh;
     background: 0;
+    border: none;
+    outline: none;
+    transition: 0.2s;
+}
+
+#goLeft:hover,
+#goRight:hover {
+    background: rgba(0, 0, 0, 0.356);
+    cursor: pointer;
+    color: whitesmoke;
 }
