--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -1,5 +1,4 @@
 .slider {
-    /* border: 1px solid red; */
     position: relative;
     width: 100%;
     height: 100vh;
@@ -8,12 +7,10 @@
     padding: 0;
     display: flex;
     align-items: center;
-    overflow: hidden;
-    background: black;
+    overflow: hidden; 
 }
 
 .slide {
-    /* border: 1px solid blue; */
     min-width: 100%;
     height: 80vh;
     transition: 0.5S;
@@ -24,6 +21,7 @@
     font-size: 2vw;
     font-weight: 700;
     position: absolute;
+    padding: 0;
     top: 50%;
     left: 0;
     transform: translateY(-50%);
@@ -39,6 +37,7 @@
     font-size: 2vw;
     font-weight: 700;
     position: absolute;
+    padding: 0;
     top: 50%;
     right: 0;
     transform: translateY(-50%);
@@ -55,4 +54,59 @@
     background: rgba(0, 0, 0, 0.356);
     cursor: pointer;
     color: whitesmoke;
+}
+
+.symbol {
+    font-size: 30px;
+}
+
+.slider-wrapper__nav {
+    position: absolute;
+    bottom: 0;
+    left: 46%;
+    bottom: 4%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.slider-wrapper__nav span{
+    display: block;
+    width: 20px;
+    height: 20px;
+    border: 1px solid #A5A2B4;
+    margin: 0 10px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.slider-wrapper__nav span:hover{
+    background-color: #A5A2B4
+}
+
+.slider-wrapper__nav span.active {
+    background-color: black;
+  }
+
+@media screen and (max-width: 1150px)   {
+    .slider-wrapper__nav  {
+        left: 40%;
+    }
+}
+
+@media screen and (max-width: 815px)   {
+    .slider-wrapper__nav  {
+        left: 33%;
+    }
+}
+
+@media screen and (max-width: 767px)   {
+    #goLeft, #goRight {
+        display: none;
+    }
+}
+@media screen and (max-width: 500px)   {
+    .slider-wrapper__nav  {
+        display: none;
+    }
 }
