--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -14,10 +14,12 @@
 .slide {
     min-width: 100%;
     height: 80vh;
-    transition: 0.5S;
+    /* transition: 0.5S; */
     overflow: hidden;
 }
-
+.moving {
+    transition: none;
+}
 #goLeft {
     font-size: 2vw;
     font-weight: 700;
@@ -31,7 +33,6 @@
     background: 0;
     border: none;
     outline: none;
-    transition: 0.2s;
 } 
 
 #goRight {
@@ -47,7 +48,6 @@
     background: 0;
     border: none;
     outline: none;
-    transition: 0.2s;
 }
 
 #goLeft:hover,
