--- a/src/components/slider/Slider.css
+++ b/src/components/slider/Slider.css
@@ -14,7 +14,7 @@
 .slide {
     min-width: 100%;
     height: 80vh;
-    /* transition: 0.5S; */
+    transition: 0.7S;
     overflow: hidden;
 }
 .moving {
